# fuse

./: .gitmodules  CMakeLists.txt
cmake/modules/: FindRose.cmake  FindSight.cmake
src/: CMakeLists.txt  compositionalTestAnalysis.C  factor_trans_systemTest.C  fuse.C  fuse.h  fuseCommandParser.C  fuseCommandParser.h  identityTranslator.C
src/abstraction/: abstract_object.C  abstract_object.h  abstract_object_map.C  abstract_object_map.h  abstract_object_set.C  abstract_object_set.h  concrete_values.C  concrete_values.h
src/analysis/: analysis.C  analysis.h  analysis_tester.C  analysis_tester.h  comp_shared_ptr.h  compose.C  compose.h  composed_analysis.C  composed_analysis.h  data_structures.h  factor_trans_system.C  factor_trans_system.h  graphIterator.C  graphIterator.h  partitions.C  partitions.h  ssa.C  ssa.h  ssa_nosight.C  stx_analysis.C  stx_analysis.h  tight_composer.C  tight_composer.h
src/cfgUtils/: CallGraphTraverse.C  CallGraphTraverse.h  DataflowCFG.C  DataflowCFG.h  VirtualCFGIterator.C  VirtualCFGIterator.h  cfgUtils.C  cfgUtils.h
src/lattice/: lattice.C  lattice.h  latticeFull.h
src/sight/: sight.h
src/sight/widgets/: ats_graph_layout.C  ats_graph_layout.h  ats_graph_structure.C  ats_graph_structure.h
src/simpleAnalyses/: AnalysisAstAttribute.C  AnalysisAstAttribute.h  VariableStateTransfer.h  call_context_sensitivity_analysis.C  call_context_sensitivity_analysis.h  const_prop_analysis.C  const_prop_analysis.h  const_prop_count.C  const_prop_count.h  dead_path_elim_analysis.C  dead_path_elim_analysis.h  defsAnalysis.C  defsAnalysis.h  dynamicMonitor.C  dynamicMonitor.h  live_dead_analysis.C  live_dead_analysis.h  ortho_array_analysis.C  ortho_array_analysis.h  parity_analysis.C  parity_analysis.h  pointsToAnalysis.C  pointsToAnalysis.h  printAnalysisStates.C  printAnalysisStates.h  saveDotAnalysis.C  saveDotAnalysis.h  taintAnalysis.C  taintAnalysis.h  virtualMethodAnalysis.C  virtualMethodAnalysis.h
src/state/: nodeState.C  nodeState.h
tests/: deadPathElimTest1.c
